    * tbl_row_delete.php: Highlight correct tab for multi row editing/export.
    * tbl_properties_export.php: Generate better query for multi row export.
    * tbl_row_delete.php, lang/*: Handle situation, where user didn't select
      anything, display DROP query on better place (bellow tabs).
    * libraries/common.lib.php: Show refresh link only for SELECT and SHOW
      queries.

2004-05-12 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: bug #951143, undefined $header_url_qry

2004-05-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_replace.php, tbl_indexes.php, sql.php, db_details_common.php,
      libraries/db_table_exists.php: use PMA_sendHeaderLocation()

2004-05-11 Michal Čihař  <michal@cihar.com>
    * libraries/sqlparser.lib.php: Modified pretty printer to display nicer
      queries generated by our db search.
    * db_search.php: Do not generate search query to include all fields, just
      SELECT * is enough.
    * libraries/display_tbl.lib.php: Use shorter query for edit/delete if
      original one is too long (bug #951744).

2004-05-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).
    * left.php: commit for Garvin: fix for wrong group expanding (group
      name containing foreign characters)

2004-05-10 Michal Čihař  <michal@cihar.com>
    * libraries/dbi/mysql.dbi.lib.php: Fix PMA_DBI_field_name, fixes also bug
      #951226.

2004-05-10 Garvin Hicking <pma@supergarv.de>
    * db_details_structure.php, tbl_properties_structure.php: Fixed
      row-selection Javascript for Internet Explorer.

2004-05-09 Garvin Hicking <pma@supergarv.de>
    * main.php, css/phpmyadmin.css.php: Corrected <form> position
      to XHTML compliance. Introduced "nospace" class.

2004-05-09 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.
    * tbl_properties_operations.php: Fixed documentation link.

2004-05-09 Alexander M. Turek  <me@derrabus.de>