@@ -24,6 +24,7 @@ $Source$
       anything, display DROP query on better place (bellow tabs).
     * libraries/common.lib.php: Show refresh link only for SELECT and SHOW
       queries.
+    * main.php, css/phpmyadmin.css.php: Let's get rid of some tables.
 
 2004-05-12 Marc Delisle  <lem9@users.sourceforge.net>
     * db_details_structure.php: bug #951143, undefined $header_url_qry
